--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.21.0",
+    "autoprefixer": "^10.4.14",
     "next": "13.4.1",
+    "postcss": "^8.4.23",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "20.1.2",
