--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "13.4.1",
     "postcss": "^8.4.23",
     "react": "18.2.0",
+    "react-datepicker": "^4.12.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "supabase": "^1.64.8",
     "typescript": "5.0.4"
   }
 }
