--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^4.12.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
+    "sass": "^1.66.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
