--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "react-datepicker": "^4.12.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
+    "sass": "^1.66.1",
     "tailwindcss": "^3.3.2",
-    "use-places-autocomplete": "^4.0.0",
-    "sass": "^1.66.1"
+    "use-places-autocomplete": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "20.1.2",
-    "@types/react": "18.2.6",
+    "@types/react": "^18.0.1",
     "@types/react-dom": "18.2.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
