--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
