--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.15",
     "geist": "^1.0.0",
+    "jsqr": "^1.4.0",
     "next": "latest",
     "postcss": "8.4.29",
     "react": "18.2.0",
