--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.0.3",
+    "@commitlint/config-conventional": "^19.0.3",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
